--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,10 @@
   color: #61dafb;
 }
 
+ul {
+  width: 300px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -35,3 +39,4 @@
     transform: rotate(360deg);
   }
 }
+
